# lightdm-tex-greeter

./: .gitignore  AUTHORS  Makefile.am  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure.ac
data/: Makefile.am  lightdm-tex-greeter.conf  lightdm-tex-greeter.desktop
po/: POTFILES.in
src/: Makefile.am  lightdm-tex-greeter.c
themes/: Makefile.am
themes/WebKitSimple/: Makefile.am  index.html  index.theme  mock.js  users.conf
themes/webkit/: index.html  mock.js
themes/webkitsimple/: Makefile.am  index.html  mock.js  script.js  style.css  users.conf
